# orb-exoplanet-hunter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  launch.md  learnings.txt  orb.toml  pyproject.toml  requirements.txt
data/: activity.jsonl  current-task.json  ruwe-cache.csv
data/targets/: m_dwarf_hz.txt
hunter/: hunt.py  orchestrator.py  pipeline.py
hunter/detrend/: wotan_wrap.py
hunter/ingest/: tess.py
hunter/multisector/: recurrence.py
hunter/output/: activity.py  candidate.py  current_state.py  weekly_summary.py
hunter/score/: composite.py
hunter/search/: tls_search.py
hunter/vet/: __init__.py  ephemeris_match.py  gaia_ruwe.py  odd_even.py  secondary.py  types.py
scripts/: deploy.sh
tests/integration/: test_dashboard_e2e.py  test_end_to_end_recovery.py  test_pipeline_e2e.py
tests/unit/: test_detrend_wotan.py  test_hunt_cli.py  test_ingest_tess.py  test_multisector_recurrence.py  test_orchestrator_http.py  test_output_candidate.py  test_output_weekly_summary.py  test_pipeline.py  test_score_composite.py  test_search_tls.py  test_verify_cheap_checks.py  test_verify_injection.py  test_verify_known_planets.py  test_verify_null_rate.py  test_verify_orchestrator.py  test_vet_chain.py  test_vet_ephemeris.py  test_vet_gaia_ruwe.py  test_vet_odd_even.py  test_vet_secondary.py
verification/: cheap_checks.py  injection.py  known_planets.py  null_rate.py  orchestrator.py  types.py
web/: README.md  index.html  vercel.json
