[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-exoplanet-hunter"
version = "0.0.1"
description = "Autonomous M-dwarf HZ exoplanet-candidate hunter on Orb Cloud."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sam", email = "awlseninc@gmail.com" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
include = ["hunter*", "verification*"]

[tool.pytest.ini_options]
# Default run stays offline: unit tests only. Opt in to integration with
#   pytest -m integration tests/integration
# or override addopts: pytest -o addopts=''
testpaths = ["tests/unit"]
addopts = "-q --strict-markers -m 'not integration'"
markers = [
    "integration: requires network access to MAST/Gaia archives",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
